# NCS-link-station

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml
apis/: config.py  main.py  routes.py
apis/data/: data.json
apis/dataprovider/: data.json  dataprovider.py
apis/dtos/: dtos.py
apis/models/: link_station.py
apis/views/: link_station.py
tests/: fixtures.py  test_dataprovider.py
