[tool.poetry]
name = "apis"
version = "0.1.0"
description = "NCS Link Station Problem"
authors = ["Towfiq <towfiqomi@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
uvicorn = "^0.15.0"
fastapi = "^0.70.0"
black = "^21.9b0"
pytest = "^6.2.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
